# openjarvis

./: .env.example  .gitignore  BUILD.md  CHANGELOG.md  README.md  docker-compose.searxng.yml  index.html  mcp-servers.example.json  package-lock.json  package.json
scripts/: install-searxng.ps1
searxng/: settings.yml
src/: App.tsx  markdown.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  audio_output.rs  commands.rs  context.rs  elevenlabs.rs  lib.rs  main.rs  mcp.rs  tts.rs  voice.rs
src-tauri/windows/: hooks.nsh
src/hooks/: useChat.ts  useMcp.ts  useVoice.tsx
src/styles/: terminal.css
src/terminal/: Terminal.tsx  renderer.ts
src/voice/: VoiceOrbOverlay.tsx  encode.ts  voiceOrb.css
